content(java): 全模块审查重构，版本基准校准至 JDK 26 并新增 Stream Gatherers