@@ -4,12 +4,13 @@ title: JShell 与 JPackage 交互环境
 module: 'java'
 category: 后端技术
 difficulty: beginner
-description: 启动 REPL 交互环境 的完整教学讲解。
+description: 用 jshell 即时验证语法与 API，用 jpackage 打出平台原生安装包。
 author: fanquanpp
-updated: '2026-08-30'
+updated: '2026-09-08'
 related:
   - 'java/100-JavaCommandLineTools'
   - 'java/076-JavaBuildTool'
+  - 'java/002-JavaOverviewDevEnv'
 prerequisites:
   - 'java/002-JavaOverviewDevEnv'
 ---
@@ -18,17 +19,93 @@ prerequisites:
 
 本篇是「JShell 与 JPackage」交互环境与打包指南。
 
-零基础第一遍只读：jshell 启动、jshell 会话控制、jpackage 基础；会用 jshell 验证语法、会打最简单的安装包。
+零基础第一遍只读：概念引入、jshell 完整会话示例、jpackage 完整流程；会用 jshell 验证语法、会打最简单的安装包。
 
 可跳过：jpackage 平台选项、应用配置与 jshell 设置遇到再查。
 
 前置：001 Java 概述与开发环境。
 
+## 概念引入：两个工具各管一头
 
+- **jshell（JDK 9+）是 REPL**（Read-Eval-Print Loop，读取-求值-打印循环）：输入一行 Java 代码，立刻看到结果，不用建工程、不用写 `main`、不用编译。类比：Python 的交互式解释器，或"带即时反馈的草稿纸"。学新 API、验证正则、算个日期，都比"建测试类跑一遍"快得多。
+- **jpackage（JDK 14+）是打包器**：把"JRE + 你的 jar + 启动器"打成一个平台原生安装包（Windows 的 msi/exe、macOS 的 dmg、Linux 的 deb/rpm），让没装 Java 的用户也能双击安装。类比：把"程序 + 精简行李箱（自带运行时）"打包成一件托运行李。
 
-﻿# Java jshell 与 jpackage 命令速查手册
+两者的共同主题是"降低门槛"：jshell 降低学习与验证的门槛，jpackage 降低交付与安装的门槛。顺带一提，JDK 25 转正的"紧凑源文件与实例 main"（JEP 512）让单文件脚本进一步简化，与 jshell 形成"草稿纸 + 纸上程序"的互补。
 
----
+## jshell 完整会话（照着敲一遍）
+
+```text
+$ jshell
+|  Welcome to JShell -- Version 25
+|  For an introduction type: /help intro
+
+jshell> 1 + 1
+$1 ==> 2                                  // 表达式结果自动存进变量 $1
+
+jshell> String name = "Java"
+name ==> "Java"
+
+jshell> name.length()
+$3 ==> 4                                  // 方法返回值也有编号
+
+jshell> import java.time.LocalDate        // import 即输即生效
+
+jshell> LocalDate.now().plusDays(7)
+$5 ==> 2026-09-15                         // 自带 toString，日期直接看结果
+
+jshell> int square(int x) { return x * x; }   // 方法定义无需类包装
+|  Created method square(int)
+
+jshell> square(9)
+$7 ==> 81
+
+jshell> /vars                             // 查看所有变量
+|    String name = "Java"
+
+jshell> /exit
+|  Goodbye
+```
+
+典型工作流：开了两个终端——左边 jshell 试 API 写法，右边把验证过的代码抄进工程；遇到"这个正则到底匹配啥"的问题，十秒钟出答案。
+
+## jpackage 完整流程（从 jar 到安装包）
+
+```bash
+# 0) 前提：已经用 Maven/Gradle 打出 app.jar（见 076 构建工具）
+
+# 1) （可选）用 jlink 定制一个只含所需模块的精简 JRE，
+#    让安装包不带完整运行时，体积从 ~300MB 缩到几十 MB
+jlink --add-modules java.base,java.logging,java.sql \
+      --output myjre --strip-debug --no-header-files --no-man-pages
+
+# 2) 打 Windows 安装包（需已安装 WiX Toolset 3.x）
+jpackage --name MyApp \
+         --input target \
+         --main-jar app.jar \
+         --main-class com.example.Main \
+         --app-version 1.0.0 \
+         --vendor "Acme Inc" \
+         --runtime-image myjre \
+         --win-shortcut --win-menu
+
+# 3) 产物：target/dist 下的 MyApp-1.0.0.msi，双击安装即用
+```
+
+macOS 与 Linux 换 `--type dmg` / `--type deb`（或 rpm），其余参数一致；`--main-jar` 与 `--module` 二选一（模块化应用用后者）。
+
+## 常见陷阱
+
+**jshell 陷阱一：把会话状态当一次性。** 变量、方法会跨片段累积，改了类定义后旧变量仍是旧类型；怀疑状态污染就 `/reset` 重来。
+
+**jshell 陷阱二：不带分号在多行表达式中报错。** 单行表达式可省分号，跨行写复杂语句时补全分号最稳妥。
+
+**jshell 陷阱三：想用第三方 jar 却没挂 classpath。** 启动时 `jshell --class-path "lib/*"`，之后 import 即可；启动后才发现，得退出重启。
+
+**jpackage 陷阱四：Windows 上报 "WiX tools (msi/exe) not found"。** 打 msi/exe 必须先装 WiX Toolset 3.x 并加入 PATH；不想装就用 `--type app-image` 产出一个绿色文件夹。
+
+**jpackage 陷阱五：以为它会自动编 jar。** 它只做"打包"，`--input` 目录里必须已经有构建产物；先把 Maven/Gradle 流程跑通。
+
+**jpackage 陷阱六：图标与签名。** `--icon` 各平台要求各自的图标格式（ico/icns/png）；正式分发还要处理代码签名，这一步在 CI 里做而不是本地。
 
 ## jshell 启动
 
@@ -173,15 +250,6 @@ import java.util.stream.*;
 
 ---
 
-**基本写法：执行外部命令**
-`/!<shell 命令>`
-```java
-// 在 jshell 中执行系统命令
-/! javac -version
-```
-
----
-
 **基本写法：设置类路径**
 `jshell --class-path <路径>`
 ```bash
@@ -216,6 +284,15 @@ jpackage --name MyApp --module com.example.app/com.example.app.Main
 ```bash
 # 使用自定义 JRE
 jpackage --name MyApp --input target --main-jar app.jar --runtime-image myjre
+```
+
+---
+
+**基本写法：应用镜像（免装工具链的通用产物）**
+`jpackage --type app-image`
+```bash
+# 产出包含启动器的绿色目录，无需 WiX/系统打包器
+jpackage --type app-image --name MyApp --input target --main-jar app.jar
 ```
 
 ---
@@ -326,3 +403,17 @@ jpackage --name MyApp --input target --main-jar app.jar \
 jpackage --name MyApp --input target --main-jar app.jar \
     --temp build/tmp --verbose
 ```
+
+## 小结
+
+初学者记住三点：
+
+> 1. jshell 是 Java 草稿纸：表达式即输即得，`/vars`、`/reset`、`/exit` 三个命令最常用。
+> 2. jpackage 打"自带 JRE 的安装包"；打 msi 前先装 WiX，怕麻烦先用 `--type app-image`。
+> 3. 两者都不参与构建：jar 交给 Maven/Gradle，jpackage 只管封装交付。
+
+进阶者还需注意：
+
+- jlink + jpackage 组合能把交付体积压到几十 MB，模块清单用 `jdeps --print-module-deps` 从代码反推。
+- jshell 默认在每个语句间自动持久状态，教学演示建议 `/set feedback concise` 减少噪音。
+- JDK 25+ 的紧凑源文件与实例 main 让"单文件脚本"不用类包装即可运行（`java script.java`），轻量脚本可不再依赖 jshell。
